Service to rest API created and errors corrected.

--- a/Webpage/Client/app/index.html
+++ b/Webpage/Client/app/index.html
@@ -54,6 +54,7 @@
     <script src="js/controllers/profileCtrl.js"></script>
     <script src="js/controllers/searchesCtrl.js"></script>
     <script src="js/controllers/signinCtrl.js"></script>
+    <script src="js/services/services.js"></script>
     <script src="lib/sha512.min.js"></script>
   </body>
 </html>
