--- a/Webpage/Client/app/index.html
+++ b/Webpage/Client/app/index.html
@@ -14,6 +14,8 @@
     <link href="http://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
     <link href="justified-nav.css" rel="stylesheet">
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="lib/pace.min.js"></script>
+    <link href="css/pace-theme-flash.css" rel="stylesheet" />
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -29,7 +31,7 @@
             <li><a href="#/main">Home</a></li>
             <li><a href="">Blog</a></li>
             <li><a href="">Wiki</a></li>
-            <li><a href="#/signin">Sign in</a></li>
+            <li><a href="#/signin">Sign in / My account</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
