--- a/Webpage/Client/app/index.html
+++ b/Webpage/Client/app/index.html
@@ -52,6 +52,7 @@
     <script src="components/version/version-directive.js"></script>
     <script src="components/version/interpolate-filter.js"></script>
     <script src="js/controllers/mainCtrl.js"></script>
+    <script src="js/controllers/nowSearchingCtrl.js"></script>
     <script src="js/controllers/passwordCtrl.js"></script>
     <script src="js/controllers/profileCtrl.js"></script>
     <script src="js/controllers/searchesCtrl.js"></script>
