Pagination in process.

--- a/Webpage/Client/app/index.html
+++ b/Webpage/Client/app/index.html
@@ -38,7 +38,7 @@
 
         <div ng-view></div>
 
-        <footer class="footer navbar-fixed-bottom">
+        <footer class="footer navbar-bottom">
             <div class="container">
                 <p class="text-muted">Jonathan Castro.</p>
             </div>
