--- a/Webpage/Client/app/index.html
+++ b/Webpage/Client/app/index.html
@@ -9,43 +9,56 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
         <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
+        <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
         <link rel="stylesheet" href="css/app.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link href="http://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
         <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
         <script src="lib/pace.min.js"></script>
         <link href="css/pace-theme-flash.css" rel="stylesheet" />
+        <!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
+        <script type="text/javascript">
+            window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website.","dismiss":"Got it!","learnMore":"More info.","link":"#/cookiespolicy","theme":"dark-bottom"};
+        </script>
+
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.9/cookieconsent.min.js"></script>
+        <!-- End Cookie Consent plugin -->
     </head>
     <body>
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#/main">Project Vulpix</a>
+        <div id="holder">
+            <nav class="navbar navbar-default navbar-fixed-top">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#/main">Project Vulpix</a>
+                    </div>
+
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="#/main">Home</a></li>
+                            <!--<li><a href="">Blog</a></li>-->
+                            <li><a href="">Wiki</a></li>
+                            <li><a href="#/signin" ng-hide="menu_sign_in">Sign in</a></li>
+                            <li><a href="#/profile" ng-show="menu_profile">My profile</a></li>
+                        </ul>
+                    </div><!-- /.navbar-collapse -->
+                </div><!-- /.container-fluid -->
+            </nav>
+
+            <div id="ng-view" ng-view></div>
+
+            <footer class="footer">
+                <div class="container">
+                    <p class="text-muted">by <a href="https://twitter.com/0xJCG" alt="Twitter profile of the developer">Jonathan Castro</a>.</p>
                 </div>
+            </footer>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#/main">Home</a></li>
-                        <!--<li><a href="">Blog</a></li>
-                        <li><a href="">Wiki</a></li>-->
-                        <li><a href="#/signin" ng-hide="menu_sign_in">Sign in</a></li>
-                        <li><a href="#/profile" ng-show="menu_profile">My profile</a></li>
-                    </ul>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-        </nav>
+        </div>
 
-        <div ng-view></div>
-
-        <footer class="footer navbar-bottom">
-            <div class="container">
-                <p class="text-muted">Jonathan Castro.</p>
-            </div>
-        </footer>
-
-        <script src="bower_components/angular/angular.js"></script>
-        <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="bower_components/angular/angular.min.js"></script>
+        <script src="bower_components/angular-route/angular-route.min.js"></script>
+        <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+        <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
         <script src="js/app.js"></script>
         <script src="components/version/version.js"></script>
         <script src="components/version/version-directive.js"></script>
