Changed "My profile" by the username in the nav bar.

--- a/Webpage/Client/app/index.html
+++ b/Webpage/Client/app/index.html
@@ -39,7 +39,7 @@
                             <!--<li><a href="">Blog</a></li>-->
                             <li><a href="">Wiki</a></li>
                             <li><a href="#/signin" ng-hide="menu_sign_in">Sign in</a></li>
-                            <li><a href="#/profile" ng-show="menu_profile">My profile</a></li>
+                            <li><a href="#/profile" ng-show="menu_profile">{{user}}</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
                 </div><!-- /.container-fluid -->
