Final name: Krashr. Logos done too.

--- a/Webpage/Client/app/index.html
+++ b/Webpage/Client/app/index.html
@@ -2,9 +2,11 @@
 <html ng-app="myApp">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="icon" href="http://getbootstrap.com/favicon.ico">
+        <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Project Vulpix</title>
+        <title>Krashᴚ</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
@@ -29,7 +31,7 @@
             <nav class="navbar navbar-default navbar-fixed-top">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="#/main">Project Vulpix</a>
+                        <a class="navbar-brand" href="#/main">Krashᴚ</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
